--- a/index.html
+++ b/index.html
@@ -27,23 +27,88 @@
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/profielfoto.png" alt="profile "/></button>
 		</section>	
 
+		<!-- <form></form> -->
 
-			<!-- <ul>
-				<li><a<a href="#">Messages</a></li>
-				<li><a<a href="#">Friends</a></li>
-				<li><a<a href="#">Profile</a></li>
-				<li><a<a href="#">My Watchlist</a></li>
-				<li><a<a href="#">Custom Lists</a></li>
-				<li><a<a href="#">Airing Calendar</a></li>
-				<li><a<a href="#">Feeds</a></li>
-				<li><a<a href="#">Personalized Recommendations</a></li>
-				<li><a<a href="#">Coins</a></li>
-				<li><a<a href="#">Settings</a></li>
-				<li><a<a href="#">VIP Forum</a></li>
-				<li><a<a href="#">Dark Mode</a></li>
-				<li><a<a href="#">Sign out</a></li>
-				<li><a<a href="#">Need Help?</a></li>
-			</ul> -->
+
+			<ul>
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/messages.svg" alt="Messages"/>
+						Messages
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/friends.svg" alt="Friends"/>
+						Friends
+					</a>
+				</li>
+
+				<li>
+					<a href="../FED-Herkansing-24-25/profile.html">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/profiel.svg" alt="Profile"/>
+						Profile
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/watchlist.svg" alt="My watchlist"/>
+						My Watchlist
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/custom.svg" alt="custom list"/>
+						Custom Lists
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/calander.svg" alt="Airing calendar"/>
+						Airing Calendar
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/feeds.svg" alt="Feeds"/>
+						Feeds
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/personalize.svg" alt="Personalized Recommendations"/>
+						Personalized Recommendations					
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/coins.svg" alt="Coins"/>
+						Coins					
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/settings.svg" alt="Personalized Recommendations"/>
+						Settings					
+					</a>
+				</li>
+
+				<li><a href="#">Settings</a></li>
+				<li><a href="#">VIP Forum</a></li>
+				<li><a href="#">Dark Mode</a></li>
+				<li><a href="#">Sign out</a></li>
+				<li><a href="#">Need Help?</a></li>
+			</ul>
+
+
 
 		<nav>
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menhamburgersluit.svg" alt="menu sluiten"/></button>
@@ -477,7 +542,7 @@
 	<footer>
 		<section>
 			<img src="../FED-Herkansing-24-25/images/iconen/footerlogo.webp" alt="My drama list logo in de footer">
-			<p>&copy; Copyright 2024. All rights reserved</p>
+			<h2>&copy; Copyright 2024. All rights reserved</h2>
 			
 			<ul>
 				<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/facebookicoon.svg" alt="Mydramalist facebook pagina"></a></li>
