--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
 
 
 		<section>
-			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="menu open"/></button>
-			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/searchiconwhite.svg" alt="search "/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="Open main navigation "/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/searchiconwhite.svg" alt="Start searching "/></button>
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="notifications"/></button>
-			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/profielfoto.png" alt="profile "/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/profielfoto.png" alt="Open secondary navigation "/></button>
 		</section>	
 
-		<!-- <form></form> -->
+		<form>
+			<input type="text" placeholder="Find Asian Dramas, Movies, Actors and more...">
+			<button><img src="../FED-Herkansing-24-25/images/iconen/" alt="Stop searching"/></button>
+		</form>
 
 
 			<ul>
@@ -47,7 +50,7 @@
 
 				<li>
 					<a href="../FED-Herkansing-24-25/profile.html">
-						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/profiel.svg" alt="Profile"/>
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/profile.svg" alt="Profile"/>
 						Profile
 					</a>
 				</li>
@@ -68,7 +71,7 @@
 
 				<li>
 					<a href="#">
-						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/calander.svg" alt="Airing calendar"/>
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/calender.svg" alt="Airing calendar"/>
 						Airing Calendar
 					</a>
 				</li>
@@ -82,7 +85,7 @@
 
 				<li>
 					<a href="#">
-						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/personalize.svg" alt="Personalized Recommendations"/>
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/personalized.svg" alt="Personalized Recommendations"/>
 						Personalized Recommendations					
 					</a>
 				</li>
@@ -101,11 +104,33 @@
 					</a>
 				</li>
 
-				<li><a href="#">Settings</a></li>
-				<li><a href="#">VIP Forum</a></li>
-				<li><a href="#">Dark Mode</a></li>
-				<li><a href="#">Sign out</a></li>
-				<li><a href="#">Need Help?</a></li>
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/vip.svg" alt="VIP Forum"/>
+						VIP Forum					
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/dark.svg" alt="dark mode"/>
+						Dark Mode					
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/out.svg" alt="Sign out"/>
+						Sign out				
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/help.svg" alt="Need Help?"/>
+						Need Help?					
+					</a>
+				</li>
 			</ul>
 
 
