--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<form>
 			<input type="text" placeholder="Find Asian Dramas, Movies, Actors and more...">
-			<button><img src="../FED-Herkansing-24-25/images/iconen/" alt="Stop searching"/></button>
+			<button><img src="../FED-Herkansing-24-25/images/iconen/kruis.svg" alt="Stop searching"/></button>
 		</form>
 
 
@@ -136,7 +136,7 @@
 
 
 		<nav>
-			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menhamburgersluit.svg" alt="menu sluiten"/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/kruis.svg" alt="menu sluiten"/></button>
 			<ul>
 				<li><h2>Home</h2></li>
 				<li><a href="#">Hide ads</a></li>
