--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,158 @@
 </head>
 
 <body>
-    <header></header>
+    <header><a><h1> <abbr title="My drama list homepage">mdl</abbr></h1></a>
+
+
+		<section>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="Open main navigation "/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/searchiconwhite.svg" alt="Start searching "/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="notifications"/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/profielfoto.png" alt="Open secondary navigation "/></button>
+		</section>	
+
+		<form>
+			<input type="text" placeholder="Find Asian Dramas, Movies, Actors and more...">
+			<button><img src="../FED-Herkansing-24-25/images/iconen/kruis.svg" alt="Stop searching"/></button>
+		</form>
+
+
+			<ul>
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/messages.svg" alt="Messages"/>
+						Messages
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/friends.svg" alt="Friends"/>
+						Friends
+					</a>
+				</li>
+
+				<li>
+					<a href="../FED-Herkansing-24-25/profile.html">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/profile.svg" alt="Profile"/>
+						Profile
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/watchlist.svg" alt="My watchlist"/>
+						My Watchlist
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/custom.svg" alt="custom list"/>
+						Custom Lists
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/calender.svg" alt="Airing calendar"/>
+						Airing Calendar
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/feeds.svg" alt="Feeds"/>
+						Feeds
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/personalized.svg" alt="Personalized Recommendations"/>
+						Personalized Recommendations					
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/coins.svg" alt="Coins"/>
+						Coins					
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/settings.svg" alt="Personalized Recommendations"/>
+						Settings					
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/vip.svg" alt="VIP Forum"/>
+						VIP Forum					
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/dark.svg" alt="dark mode"/>
+						Dark Mode					
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/out.svg" alt="Sign out"/>
+						Sign out				
+					</a>
+				</li>
+
+				<li>
+					<a href="#">
+						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/help.svg" alt="Need Help?"/>
+						Need Help?					
+					</a>
+				</li>
+			</ul>
+
+
+
+		<nav>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/kruis.svg" alt="menu sluiten"/></button>
+			<ul>
+				<li><h2>Home</h2></li>
+				<li><a href="#">Hide ads</a></li>
+				<li><a href="#">Calendar</a></li>
+				<li><a href="#">Lists</a></li>
+				<li><a href="#">Feeds</a></li>
+				<li><a href="#">Articles</a></li>
+				<li><a href="#">Trailers</a></li>
+				<li><a href="#">Forms</a></li>
+				<li><a href="#">Contributors</a></li>
+				<li><a href="#">Games</a></li>
+				<li><a href="#">Stats Leaderboard</a></li>
+
+				<li><h2>Shows</h2></li>
+				<li><a href="#">Tops Shows</a></li>
+				<li><a href="#">Most Popular Shows</a></li>
+				<li><a href="#">Variety Shows</a></li>
+				<li><a href="#">Upcoming</a></li>
+				<li><a href="#">Reviews</a></li>
+				<li><a href="#">Recommendations</a></li>
+
+				<li><h2>Movies</h2></li>
+				<li><a href="#">Top Movies</a></li>
+				<li><a href="#">Most Popular Movies</a></li>
+				<li><a href="#">Upcoming</a></li>
+				<li><a href="#">Reviews</a></li>
+				<li><a href="#">Recommendations</a></li>
+
+				<li><h2>People</h2></li>
+				<li><a href="#">Top Actos</a></li>
+			</ul>
+		</nav></header>
 
     <main>
 
