--- a/index.html
+++ b/index.html
@@ -579,21 +579,23 @@
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/appleicoon.svg" alt="Download on the my dramalist app, Apple Store">
-						<p>Download on the App Store</p>
+						<p>Download on the </p>
+						<p>App Store</p>
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/playstoreicoon.svg" alt="Download on the my dramalist app, Google Play"> 
-						<p>Download on Google Play</p>
+						<p>Download on </p> 
+						<p>Google Play</p>
 					</a>
 				</li>
 			</ul>
 		</section>
 
 		<section>
-			<h3>About</h3>
+			<h2>About</h2>
 			<ul>
 				<li><a href="#"> <abbr title="Frequently asked questions">FAQ</abbr> </a></li>
 				<li><a href="#"> About us </a></li>
@@ -605,7 +607,7 @@
 		</section>
 
 		<section>
-			<h3>Work with us</h3>
+			<h2>Work with us</h2>
 			<ul>
 				<li><a href="#"> Advertise </a></li>
 				<li><a href="#"> API </a></li>
@@ -613,7 +615,7 @@
 		</section>
 
 		<section>
-			<h3>Recommended</h3>
+			<h2>Recommended</h2>
 			<ul>
 				<li><a href="#"> K-drama calendar </a></li>
 				<li><a href="#"> Top 100 Korean dramas </a></li>
