--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <header><a><h1> <abbr title="My drama list homepage">mdl</abbr></h1></a>
+    <header>
+		<a href="../FED-Herkansing-24-25/index.html"><h1> <abbr title="My drama list homepage">mdl</abbr></h1></a>
 
 
 		<section>
@@ -46,7 +47,7 @@
 				</li>
 
 				<li>
-					<a href="../FED-Herkansing-24-25/profile.html">
+					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/profile.svg" alt="Profile"/>
 						Profile
 					</a>
@@ -165,7 +166,8 @@
 				<li><h2>People</h2></li>
 				<li><a href="#">Top Actos</a></li>
 			</ul>
-		</nav></header>
+		</nav>
+	</header>
 
     <main>
 
