--- a/profile.html
+++ b/profile.html
@@ -191,6 +191,19 @@
 <!--SECTION 2  -->   
 		<section>
 			<h2>Statistics</h2>
+			<ul>
+				<li>
+					<p>39d 15h 27m</p>
+					<p>all time</p>
+					<p>1,355 episodes, 109 shows</p>
+				</li>
+				<li>
+					<p>2d 6h 43m</p>
+					<p>all time</p>
+					<p>30 movies</p>
+				</li>
+			</ul>
+
 		</section>
 
 <!--SECTION 3  -->   
