--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/dark.svg" alt="dark mode"/>
-						Dark Mode					
+						Dark Mode	
+						<button>Off</button>				
 					</a>
 				</li>
 
