--- a/index.html
+++ b/index.html
@@ -37,99 +37,100 @@
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/messages.svg" alt="Messages"/>
-						Messages
+						<p>Messages</p>
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/friends.svg" alt="Friends"/>
-						Friends
+						<p>Friends</p>
 					</a>
 				</li>
 
 				<li>
 					<a href="../FED-Herkansing-24-25/profile.html">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/profile.svg" alt="Profile"/>
-						Profile
+						<p>Profile</p>
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/watchlist.svg" alt="My watchlist"/>
-						My Watchlist
+						<p>My Watchlist</p>
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/custom.svg" alt="custom list"/>
-						Custom Lists
+						<p>Custom Lists</p>
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/calender.svg" alt="Airing calendar"/>
-						Airing Calendar
+						<p>Airing Calendar</p>
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/feeds.svg" alt="Feeds"/>
-						Feeds
+						<p>Feeds</p>
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/personalized.svg" alt="Personalized Recommendations"/>
-						Personalized Recommendations					
+						<p>Personalized Recommendations</p>			
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/coins.svg" alt="Coins"/>
-						Coins					
+						<p>Coins</p>					
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/settings.svg" alt="Personalized Recommendations"/>
-						Settings					
+						<p>Settings</p>					
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/vip.svg" alt="VIP Forum"/>
-						VIP Forum					
+						<p>VIP Forum</p>				
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/dark.svg" alt="dark mode"/>
-						Dark Mode	
-						<button>Off</button>				
+						<p>Dark Mode</p>	
+										
 					</a>
+					<button>Off</button>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/out.svg" alt="Sign out"/>
-						Sign out				
+						<p>Sign out	</p>			
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/help.svg" alt="Need Help?"/>
-						Need Help?					
+						<p>Need Help?</p>					
 					</a>
 				</li>
 			</ul>
@@ -176,14 +177,18 @@
 	<main>
 <!--section 1-->
 		<section>
-			<a href="#">
-					<h2>Koo Kyo Hwan and Shin Hyun Been will reportedly join Jun Ji Hyun in a new film</h2>
-					<p>News</p>
-					<img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="">
-					<p> 15 hours ago</p>
-					<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt=""> 
-					<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt=""> 
-				</a>		
+			<ul>
+				<li>
+					<a> 
+						<h2>Koo Kyo Hwan and Shin Hyun Been will reportedly join Jun Ji Hyun in a new film</h2>
+						<p>News</p>
+						<img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="">
+						<p> 15 hours ago</p>
+						<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt=""> 
+						<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt=""> 
+					</a>
+				</li>
+			</ul>		
 		</section>
 <!--EIND-section 1-->
 
@@ -567,8 +572,8 @@
 <!--FOOTER-->	
 	<footer>
 		<section>
-			<img src="../FED-Herkansing-24-25/images/iconen/footerlogo.webp" alt="My drama list logo in de footer">
-			<h2>&copy; Copyright 2024. All rights reserved</h2>
+			<h2><img src="../FED-Herkansing-24-25/images/iconen/footerlogo.webp" alt="My drama list logo in de footer"></h2>
+			<p>&copy; Copyright 2024. All rights reserved</p>
 			
 			<ul>
 				<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/facebookicoon.svg" alt="Mydramalist facebook pagina"></a></li>
