--- a/index.html
+++ b/index.html
@@ -432,7 +432,6 @@
 		<h2>Popular voting lists?</h2>
 		<a href="#">more&gt;&gt;</a>
 
-		<h3>Drama's you wish you could watch for the first time again</h3>
 		<ul> 
 			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/flowerofevil.jpeg" alt=""></a></li>
 			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/theuntamed.jpeg" alt=""></a></li>
@@ -440,8 +439,26 @@
 			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/hospitalplaylist.jpeg" alt=""></a></li>
 			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/weakheroclass1.jpeg" alt=""></a></li>
 		</ul>
+		<h3>Drama's you wish you could watch for the first time again</h3>
+		<ul>
+			<li>
+				 <p>197 titles</p>
+				
+			</li>
 
-		<h3>Favourite Chinese Actors</h3>
+			<li>
+				<p>423 voters</p>
+			</li>
+
+			<li> 
+				<p>63 loves</p>
+			</li>
+
+			<li>
+				<p>7</p>
+			</li>
+		</ul>
+
 		<ul> 
 			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/xiaozhan.jpeg" alt=""></a></li>
 			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/chenzheyuan.jpeg" alt=""></a></li>
@@ -449,6 +466,27 @@
 			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/wangxingyue.jpeg" alt=""></a></li>
 			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/zhanglinghe.jpeg" alt=""></a></li>
 		</ul>
+		<h3>Favourite Chinese Actors</h3>
+		<ul>
+			<li>
+				 <p> 45 titles</p>
+				
+			</li>
+
+			<li>
+				<p>356 voters</p>
+			</li>
+
+			<li> 
+				<p>89 loves</p>
+			</li>
+
+			<li>
+				<p>29</p>
+			</li>
+		</ul>
+
+
 	</section>
 <!--EIND-section (8)6-->
 
