--- a/index.html
+++ b/index.html
@@ -442,19 +442,22 @@
 		<h3>Drama's you wish you could watch for the first time again</h3>
 		<ul>
 			<li>
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
 				 <p>197 titles</p>
-				
 			</li>
 
 			<li>
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
 				<p>423 voters</p>
 			</li>
 
 			<li> 
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
 				<p>63 loves</p>
 			</li>
 
 			<li>
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
 				<p>7</p>
 			</li>
 		</ul>
@@ -469,19 +472,23 @@
 		<h3>Favourite Chinese Actors</h3>
 		<ul>
 			<li>
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
 				 <p> 45 titles</p>
 				
 			</li>
 
 			<li>
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
 				<p>356 voters</p>
 			</li>
 
 			<li> 
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
 				<p>89 loves</p>
 			</li>
 
 			<li>
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
 				<p>29</p>
 			</li>
 		</ul>
