--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<section>
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="Open main navigation "/></button>
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/searchiconwhite.svg" alt="Start searching "/></button>
-			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="notifications"/></button>
+			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="Notifications"/></button>
 			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/profielfoto.png" alt="Open secondary navigation "/></button>
 		</section>	
 
@@ -182,10 +182,10 @@
 					<a> 
 						<h2>Koo Kyo Hwan and Shin Hyun Been will reportedly join Jun Ji Hyun in a new film</h2>
 						<p>News</p>
-						<img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="">
+						<img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="Koo Kyo Hwan and Shin Hyun">
 						<p> 15 hours ago</p>
-						<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt=""> 
-						<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt=""> 
+						<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
+						<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions"> 
 					</a>
 				</li>
 			</ul>		
@@ -206,9 +206,9 @@
 				<h3>Love Next Door Actors Bid Farewell with Final Remarks</h3>
 				<p>News</p>
 				<p>15 minutes ago</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt=""> 
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
 				<p>23</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt=""> 
+				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions"> 
 				<p>11</p>
 				</a>	
 			</li>
@@ -218,9 +218,9 @@
 				<h3>Kang Mi Na will reportedly reunite with Ji Chang Wook and Seo In Guk in the upcoming superhero K-drama</h3>
 				<p>News</p>
 				<p>14 hours ago</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt=""> 
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
 				<p>98</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt=""> 
+				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions"> 
 				<p>50</p>
 				</a>
 			</li>
@@ -230,9 +230,9 @@
 				<h3>Myths and Legends of Asia</h3>
 				<p>Editorials</p>
 				<p>2 days ago</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt=""> 
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
 				<p>16</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt=""> 
+				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions"> 
 				<p>10</p>
 				</a>
 			</li>
@@ -242,9 +242,9 @@
 				<h3>Netflix Releases Still and Posters for "Uprising"</h3>
 				<p>News</p>
 				<p>1 day ago</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt=""> 
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
 				<p>26</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt=""> 
+				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions"> 
 				<p>12</p>
 				</a>
 			</li>
@@ -254,9 +254,9 @@
 				<h3>"A Shop for Killers" Park Jeong Woo to join the cast of the upcoming K-drama "Spice up Our Love"</h3>
 				<p>News</p>
 				<p>1 day ago</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt=""> 
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
 				<p>16</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt=""> 
+				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions"> 
 				<p>19</p>
 				</a>
 			</li>
@@ -299,7 +299,7 @@
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/vincenzo.jpg" alt="vincenzo"> <p> Vincenzo</p></a>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/vincenzo.jpg" alt="Vincenzo"> <p> Vincenzo</p></a>
 				<p>Korean Drama</p>
 			</li>
 		</ul>
@@ -391,7 +391,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/vincenzo.jpg" alt="vincenzo"> <p> Vincenzo</p></a>
+				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/vincenzo.jpg" alt="Vincenzo"> <p> Vincenzo</p></a>
 				<p>Korean Drama</p>
 			</li>
 		</ul>
@@ -433,62 +433,62 @@
 		<a href="#">more&gt;&gt;</a>
 
 		<ul> 
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/flowerofevil.jpeg" alt=""></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/theuntamed.jpeg" alt=""></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/itsokaytonotbeokay.jpeg" alt=""></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/hospitalplaylist.jpeg" alt=""></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/weakheroclass1.jpeg" alt=""></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/flowerofevil.jpeg" alt="Flower of evil"></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/theuntamed.jpeg" alt="The untamed"></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/itsokaytonotbeokay.jpeg" alt="It's okay to not be okay"></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/hospitalplaylist.jpeg" alt="Hospital playlist"></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/weakheroclass1.jpeg" alt="Weak hero class one"></a></li>
 		</ul>
 		<h3>Drama's you wish you could watch for the first time again</h3>
 		<ul>
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
 				 <p>197 titles</p>
 			</li>
 
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
 				<p>423 voters</p>
 			</li>
 
 			<li> 
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
 				<p>63 loves</p>
 			</li>
 
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
 				<p>7</p>
 			</li>
 		</ul>
 
 		<ul> 
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/xiaozhan.jpeg" alt=""></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/chenzheyuan.jpeg" alt=""></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/lixian.jpeg" alt=""></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/wangxingyue.jpeg" alt=""></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/zhanglinghe.jpeg" alt=""></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/xiaozhan.jpeg" alt="Xiao Zhan"></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/chenzheyuan.jpeg" alt="Cheng Zhe Yuan"></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/lixian.jpeg" alt="Li Xian"></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/wangxingyue.jpeg" alt="Wang Xing Yue"></a></li>
+			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/zhanglinghe.jpeg" alt="Zhang Ling He"></a></li>
 		</ul>
 		<h3>Favourite Chinese Actors</h3>
 		<ul>
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
 				 <p> 45 titles</p>
 				
 			</li>
 
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
 				<p>356 voters</p>
 			</li>
 
 			<li> 
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
 				<p>89 loves</p>
 			</li>
 
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="">
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
 				<p>29</p>
 			</li>
 		</ul>
