--- a/index.html
+++ b/index.html
@@ -117,7 +117,14 @@
 						<p>Dark Mode</p>	
 										
 					</a>
-					<button>Off</button>
+					<label>
+						<input type="radio" name="kleurtjes" value="light">
+						Light Mode
+					</label>
+					<label>
+						<input type="radio" name="kleurtjes" value="dark">
+						Dark Mode
+					</label>
 				</li>
 
 				<li>
@@ -176,20 +183,24 @@
 <!--MAIN-->
 	<main>
 <!--section 1-->
-		<section>
-			<ul>
-				<li>
-					<a> 
-						<h2>Koo Kyo Hwan and Shin Hyun Been will reportedly join Jun Ji Hyun in a new film</h2>
-						<p>News</p>
-						<img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="Koo Kyo Hwan and Shin Hyun">
-						<p> 15 hours ago</p>
-						<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
-						<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions"> 
-					</a>
-				</li>
-			</ul>		
-		</section>
+	<section>
+		<ul>
+			<a href="#"> 
+
+			<li><img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="Koo Kyo Hwan and Shin Hyun"></li>
+			<li>
+				<h2>Koo Kyo Hwan and Shin Hyun Been will reportedly join Jun Ji Hyun in a new film</h2>
+				<p>News</p>
+				<p> 15 hours ago</p>
+				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
+				<p>23</p>
+				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions"> 
+				<p>11</p>
+			</li>
+	 		</a>
+		</ul>		
+
+	</section>
 <!--EIND-section 1-->
 
 <!--section 2-->
@@ -203,7 +214,7 @@
 		<ul>
 			<li>
 				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/lovenextdoor.jpg" alt="Love Next Door Actors"> 
-				<h3>Love Next Door Actors Bid Farewell with Final Remarks</h3>
+				<h3>Love Next Door actors bid farewell with final remarks</h3>
 				<p>News</p>
 				<p>15 minutes ago</p>
 				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
@@ -239,7 +250,7 @@
 
 			<li>
 				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/uprising.jpeg" alt="Posters for Uprising"> 
-				<h3>Netflix Releases Still and Posters for "Uprising"</h3>
+				<h3>Netflix releases still and posters for "Uprising"</h3>
 				<p>News</p>
 				<p>1 day ago</p>
 				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
@@ -442,12 +453,12 @@
 		<h3>Drama's you wish you could watch for the first time again</h3>
 		<ul>
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
+				<img src="../FED-Herkansing-24-25/images/iconen/titles.svg" alt="Titles">
 				 <p>197 titles</p>
 			</li>
 
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
+				<img src="../FED-Herkansing-24-25/images/iconen/voters.svg" alt="Voters">
 				<p>423 voters</p>
 			</li>
 
@@ -457,7 +468,7 @@
 			</li>
 
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
+				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions">
 				<p>7</p>
 			</li>
 		</ul>
@@ -472,13 +483,13 @@
 		<h3>Favourite Chinese Actors</h3>
 		<ul>
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
+				<img src="../FED-Herkansing-24-25/images/iconen/titles.svg" alt="Titles">
 				 <p> 45 titles</p>
 				
 			</li>
 
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
+				<img src="../FED-Herkansing-24-25/images/iconen/voters.svg" alt="voters">
 				<p>356 voters</p>
 			</li>
 
@@ -488,7 +499,7 @@
 			</li>
 
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes">
+				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions">
 				<p>29</p>
 			</li>
 		</ul>
