--- a/profile.html
+++ b/profile.html
@@ -114,6 +114,14 @@
 						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/dark.svg" alt="dark mode"/>
 						Dark Mode					
 					</a>
+					<label>
+						<input type="radio" name="kleurtjes" value="light">
+						Light Mode
+					</label>
+					<label>
+						<input type="radio" name="kleurtjes" value="dark">
+						Dark Mode
+					</label>
 				</li>
 
 				<li>
@@ -204,6 +212,34 @@
 				</li>
 			</ul>
 
+			<!-- <table>
+				<tr>
+					<th>Currently watching</th>
+					<th>Completed</th>
+					<th>Plant to watch</th>
+					<th>On-hold</th>
+					<th>Dropped</th>
+					<th>Not interested</th>
+				</tr>
+
+				<tr>
+					<tb>3 Shows</tb>
+					<tb>99 Shows</tb>
+					<tb>46 Shows</tb>
+					<tb>0 Shows</tb>
+					<td>7 Shows</td>
+					<td>0 Shows</td>
+				</tr>
+
+				<tr>
+					<td>0 Movies</td>
+					<td>28 Movies</td>
+					<td>6 Movies</td>
+					<td>0 Movies</td>
+					<td>2 Movies</td>
+					<td>0 Movies</td>
+				</tr>
+			</table>	 -->
 		</section>
 
 <!--SECTION 3  -->   
