--- a/index.html
+++ b/index.html
@@ -641,16 +641,14 @@
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/appleicoon.svg" alt="Download on the my dramalist app, Apple Store">
-						<p>Download on the </p>
-						<p>App Store</p>
+						<p>Download on the App Store</p>
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
 						<img src="../FED-Herkansing-24-25/images/iconen/playstoreicoon.svg" alt="Download on the my dramalist app, Google Play"> 
-						<p>Download on </p> 
-						<p>Google Play</p>
+						<p>Download on Google Play</p>
 					</a>
 				</li>
 			</ul>
