--- a/profile.html
+++ b/profile.html
@@ -342,7 +342,66 @@
 		</section>		
     </main>
 
-    <footer></footer>
+    <footer>
+		<footer>
+			<section>
+				<h2><img src="../FED-Herkansing-24-25/images/iconen/footerlogo.webp" alt="My drama list logo in de footer"></h2>
+				<p>&copy; Copyright 2024. All rights reserved</p>
+				
+				<ul>
+					<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/facebookicoon.svg" alt="Mydramalist facebook pagina"></a></li>
+					<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/twittericoon.svg" alt="Mydramalist X pagina"> </a></li>
+					<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/instagramicoon.svg" alt="Mydramalist Instagram pagina"></a></li>
+					<li><a href="#"> <img src="../FED-Herkansing-24-25/images/iconen/youtubeicoon.svg" alt="Mydramalist Youtube pagina"></a></li>
+				</ul>
+				<ul>
+					<li>
+						<a href="#">
+							<img src="../FED-Herkansing-24-25/images/iconen/appleicoon.svg" alt="Download on the my dramalist app, Apple Store">
+							<p>Download on the App Store</p>
+						</a>
+					</li>
+	
+					<li>
+						<a href="#">
+							<img src="../FED-Herkansing-24-25/images/iconen/playstoreicoon.svg" alt="Download on the my dramalist app, Google Play"> 
+							<p>Download on Google Play</p>
+						</a>
+					</li>
+				</ul>
+			</section>
+	
+			<section>
+				<h2>About</h2>
+				<ul>
+					<li><a href="#"> <abbr title="Frequently asked questions">FAQ</abbr> </a></li>
+					<li><a href="#"> About us </a></li>
+					<li><a href="#"> Contact </a></li>
+					<li><a href="#"> Terms </a></li>
+					<li><a href="#"> Privacy </a></li>
+					<li><a href="#"> Support us </a></li>
+				</ul>
+			</section>
+	
+			<section>
+				<h2>Work with us</h2>
+				<ul>
+					<li><a href="#"> Advertise </a></li>
+					<li><a href="#"> API </a></li>
+				</ul>
+			</section>
+	
+			<section>
+				<h2>Recommended</h2>
+				<ul>
+					<li><a href="#"> K-drama calendar </a></li>
+					<li><a href="#"> Top 100 Korean dramas </a></li>
+					<li><a href="#"> Top 100 Japansese dramas </a></li>
+					<li><a href="#"> Top 100 Chinese dramas </a></li>
+				</ul>	
+			</section>
+		</footer>
+	</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
