--- a/index.html
+++ b/index.html
@@ -71,7 +71,32 @@
 
 				<li>
 					<a href="#">
-						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/calender.svg" alt="Airing calendar"/>
+						<!-- <img src="../FED-Herkansing-24-25/images/iconen/naviconen/calender.svg" alt="Airing calendar"/> -->
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 237 237">
+							<defs>
+							  <style>
+								.cls-1 {
+								  stroke-miterlimit: 10;
+								  stroke-width: 8px;
+								}
+						  
+								.cls-1, .cls-2 {
+								  fill: none;
+								}
+							  </style>
+							</defs>
+							<g id="calender">
+							  <g>
+								<rect class="cls-1" x="21.73" y="46.88" width="171.84" height="165.12" rx="8.83" ry="8.83"/>
+								<line class="cls-1" x1="21.06" y1="85.81" x2="189.54" y2="85.81"/>
+								<line class="cls-1" x1="60.66" y1="42.85" x2="60.66" y2="16"/>
+								<line class="cls-1" x1="151.95" y1="42.85" x2="151.95" y2="16"/>
+							  </g>
+							</g>
+							<g id="Laag_18" data-name="Laag 18">
+							  <rect class="cls-2" x="7" y="16" width="200" height="200"/>
+							</g>
+						  </svg>
 						<p>Airing Calendar</p>
 					</a>
 				</li>
