--- a/profile.html
+++ b/profile.html
@@ -212,7 +212,7 @@
 				</li>
 			</ul>
 
-			<!-- <table>
+			<table>
 				<tr>
 					<th>Currently watching</th>
 					<th>Completed</th>
@@ -223,10 +223,10 @@
 				</tr>
 
 				<tr>
-					<tb>3 Shows</tb>
-					<tb>99 Shows</tb>
-					<tb>46 Shows</tb>
-					<tb>0 Shows</tb>
+					<td>3 Shows</td>
+					<td>99 Shows</td>
+					<td>46 Shows</td>
+					<td>0 Shows</td>
 					<td>7 Shows</td>
 					<td>0 Shows</td>
 				</tr>
@@ -239,7 +239,7 @@
 					<td>2 Movies</td>
 					<td>0 Movies</td>
 				</tr>
-			</table>	 -->
+			</table>	
 		</section>
 
 <!--SECTION 3  -->   
