--- a/index.html
+++ b/index.html
@@ -125,18 +125,6 @@
 				<li>
 					<a href="#">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 237 237">
-							<defs>
-							  <style>
-								:root{
-									color-scheme: light dark;
-									--section-background: light-dark(#ffffff, #242526);
-									--black-text: light-dark(#111, #eee);
-									--blue-text: #1675b6;
-
-								}
-
-							  </style>
-							</defs>
 							<g>
 							  <rect x="88.37" y="96.65" width="115.38" height="74.66" rx="5.38" ry="5.38" transform="translate(292.13 267.97) rotate(180)"/>
 							  <rect x="11" y="41" width="133.03" height="84.16" rx="6.14" ry="6.14"/>
@@ -307,24 +295,32 @@
 <!--MAIN-->
 	<main>
 <!--section 1-->
-	<section>
-		<ul>
-			<a href="#"> 
+<section>
+	<ul>
+		<a href="#"> 
 
-			<li><img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="Koo Kyo Hwan and Shin Hyun"></li>
-			<li>
-				<h2>Koo Kyo Hwan and Shin Hyun Been will reportedly join Jun Ji Hyun in a new film</h2>
-				<p>News</p>
-				<p> 15 hours ago</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/heart.svg" alt="Likes"> 
-				<p>23</p>
-				<img src="../FED-Herkansing-24-25/images/iconen/chat.svg" alt="Reactions"> 
-				<p>11</p>
-			</li>
-	 		</a>
-		</ul>		
+		<li><img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="Koo Kyo Hwan and Shin Hyun"></li>
+		<li>
+			<h2>Koo Kyo Hwan and Shin Hyun Been will reportedly join Jun Ji Hyun in a new film</h2>
+			<p>News</p>
+			<p> 15 hours ago</p>
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.00 24.00">
+				<g>
+				<path d="M8.96173 18.9109L9.42605 18.3219L8.96173 18.9109ZM12 5.50063L11.4596 6.02073C11.601 6.16763 11.7961 6.25063 12 6.25063C12.2039 6.25063 12.399 6.16763 12.5404 6.02073L12 5.50063ZM15.0383 18.9109L15.5026 19.4999L15.0383 18.9109ZM9.42605 18.3219C7.91039 17.1271 6.25307 15.9603 4.93829 14.4798C3.64922 13.0282 2.75 11.3345 2.75 9.1371H1.25C1.25 11.8026 2.3605 13.8361 3.81672 15.4758C5.24723 17.0866 7.07077 18.3752 8.49742 19.4999L9.42605 18.3219ZM2.75 9.1371C2.75 6.98623 3.96537 5.18252 5.62436 4.42419C7.23607 3.68748 9.40166 3.88258 11.4596 6.02073L12.5404 4.98053C10.0985 2.44352 7.26409 2.02539 5.00076 3.05996C2.78471 4.07292 1.25 6.42503 1.25 9.1371H2.75ZM8.49742 19.4999C9.00965 19.9037 9.55954 20.3343 10.1168 20.6599C10.6739 20.9854 11.3096 21.25 12 21.25V19.75C11.6904 19.75 11.3261 19.6293 10.8736 19.3648C10.4213 19.1005 9.95208 18.7366 9.42605 18.3219L8.49742 19.4999ZM15.5026 19.4999C16.9292 18.3752 18.7528 17.0866 20.1833 15.4758C21.6395 13.8361 22.75 11.8026 22.75 9.1371H21.25C21.25 11.3345 20.3508 13.0282 19.0617 14.4798C17.7469 15.9603 16.0896 17.1271 14.574 18.3219L15.5026 19.4999ZM22.75 9.1371C22.75 6.42503 21.2153 4.07292 18.9992 3.05996C16.7359 2.02539 13.9015 2.44352 11.4596 4.98053L12.5404 6.02073C14.5983 3.88258 16.7639 3.68748 18.3756 4.42419C20.0346 5.18252 21.25 6.98623 21.25 9.1371H22.75ZM14.574 18.3219C14.0479 18.7366 13.5787 19.1005 13.1264 19.3648C12.6739 19.6293 12.3096 19.75 12 19.75V21.25C12.6904 21.25 13.3261 20.9854 13.8832 20.6599C14.4405 20.3343 14.9903 19.9037 15.5026 19.4999L14.574 18.3219Z" /> 
+				</g>
+			</svg>
+			<p>23</p>
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<g>
+				<path d="M16 8H20C20.5523 8 21 8.44772 21 9V20L17.667 17.231C17.4875 17.0818 17.2608 17 17.0273 17H9C8.44771 17 8 16.5523 8 16V13M16 8V5C16 4.44772 15.5523 4 15 4H4C3.44772 4 3 4.44772 3 5V16.0003L6.33301 13.2308C6.51255 13.0817 6.73924 13 6.97266 13H8M16 8V12C16 12.5523 15.5523 13 15 13H8"/>
+				</g>
+				</svg>
+			<p>11</p>
+		</li>
+		 </a>
+	</ul>		
 
-	</section>
+</section>
 <!--EIND-section 1-->
 
 <!--section 2-->
@@ -617,12 +613,26 @@
 		<h3>Drama's you wish you could watch for the first time again</h3>
 		<ul>
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/titles.svg" alt="Titles">
-				 <p>197 titles</p>
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 229.83 210.02">
+					<g>
+					  <rect class="cls-1" x="11.09" y="25.4" width="192" height="123.04" rx="1.37" ry="1.37"/>
+					  <line class="cls-1" x1="44.9" y1="179.54" x2="169.29" y2="179.54"/>
+					  <line class="cls-1" x1="107.09" y1="183.6" x2="107.09" y2="148.44"/>
+					</g>
+					</svg>
+				<p>197 titles</p>
 			</li>
 
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/voters.svg" alt="Voters">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 209.41 200">
+					<g>
+					  <path class="cls-1" d="m200.91,116.25h-28.7V38.75c0-2.07-1.68-3.75-3.75-3.75H40.54c-2.07,0-3.75,1.68-3.75,3.75v77.5H10.8c-.6,0-1.09.49-1.09,1.09v46.56c0,.6.49,1.09,1.09,1.09h190.1c.6,0,1.09-.49,1.09-1.09v-46.56c0-.6-.49-1.09-1.09-1.09Z"/>
+					  <line class="cls-1" x1="23.25" y1="140.63" x2="188.46" y2="140.63"/>
+					  <line class="cls-1" x1="172.21" y1="137.92" x2="172.21" y2="113.54"/>
+					  <line class="cls-1" x1="36.79" y1="139.27" x2="36.79" y2="114.9"/>
+					  <polyline class="cls-1" points="74.71 82.4 95.02 104.06 134.29 63.44"/>
+					</g>
+					</svg>
 				<p>423 voters</p>
 			</li>
 
@@ -655,13 +665,27 @@
 		<h3>Favourite Chinese Actors</h3>
 		<ul>
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/titles.svg" alt="Titles">
-				 <p> 45 titles</p>
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 229.83 210.02">
+					<g>
+					  <rect class="cls-1" x="11.09" y="25.4" width="192" height="123.04" rx="1.37" ry="1.37"/>
+					  <line class="cls-1" x1="44.9" y1="179.54" x2="169.29" y2="179.54"/>
+					  <line class="cls-1" x1="107.09" y1="183.6" x2="107.09" y2="148.44"/>
+					</g>
+					</svg>
+				<p> 45 titles</p>
 				
 			</li>
 
 			<li>
-				<img src="../FED-Herkansing-24-25/images/iconen/voters.svg" alt="voters">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 209.41 200">
+					<g>
+					  <path class="cls-1" d="m200.91,116.25h-28.7V38.75c0-2.07-1.68-3.75-3.75-3.75H40.54c-2.07,0-3.75,1.68-3.75,3.75v77.5H10.8c-.6,0-1.09.49-1.09,1.09v46.56c0,.6.49,1.09,1.09,1.09h190.1c.6,0,1.09-.49,1.09-1.09v-46.56c0-.6-.49-1.09-1.09-1.09Z"/>
+					  <line class="cls-1" x1="23.25" y1="140.63" x2="188.46" y2="140.63"/>
+					  <line class="cls-1" x1="172.21" y1="137.92" x2="172.21" y2="113.54"/>
+					  <line class="cls-1" x1="36.79" y1="139.27" x2="36.79" y2="114.9"/>
+					  <polyline class="cls-1" points="74.71 82.4 95.02 104.06 134.29 63.44"/>
+					</g>
+					</svg>
 				<p>356 voters</p>
 			</li>
 
