--- a/profile.html
+++ b/profile.html
@@ -268,7 +268,7 @@
 
 
 		<nav>
-			<button aria-hidden="true">
+			<button aria-label="close navigation">
 				<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<g>
 					<path d="M6.99486 7.00636C6.60433 7.39689 6.60433 8.03005 6.99486 8.42058L10.58 12.0057L6.99486 15.5909C6.60433 15.9814 6.60433 16.6146 6.99486 17.0051C7.38538 17.3956 8.01855 17.3956 8.40907 17.0051L11.9942 13.4199L15.5794 17.0051C15.9699 17.3956 16.6031 17.3956 16.9936 17.0051C17.3841 16.6146 17.3841 15.9814 16.9936 15.5909L13.4084 12.0057L16.9936 8.42059C17.3841 8.03007 17.3841 7.3969 16.9936 7.00638C16.603 6.61585 15.9699 6.61585 15.5794 7.00638L11.9942 10.5915L8.40907 7.00636C8.01855 6.61584 7.38538 6.61584 6.99486 7.00636Z"/> 
@@ -327,7 +327,7 @@
 				<li><button>Year</button></li>
 				<li><button>My Watchlist</button></li>
 				<li>
-					<button>				
+					<button aria-label="Play profiel audio">				
 					<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 					<g> 
 					<path  d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22ZM10.6935 15.8458L15.4137 13.059C16.1954 12.5974 16.1954 11.4026 15.4137 10.941L10.6935 8.15419C9.93371 7.70561 9 8.28947 9 9.21316V14.7868C9 15.7105 9.93371 16.2944 10.6935 15.8458Z" /> 
@@ -336,7 +336,8 @@
 					</button>
 				</li>
 			</ul>
-			<audio src="audio/profielaudio.mp4" controls></audio>
+			<audio src="audio/profielaudio.mp4"></audio>
+			<!-- controls toevoegen om zelf zichtbaar te maken -->
         </section>
 
 <!--SECTION 2  -->   
@@ -354,7 +355,23 @@
 					<p>30 movies</p>
 				</li>
 			</ul>
-	
+
+
+			<ul>
+				<li>
+					<label>
+						<input type="radio" name="table">
+						table
+					</label>
+					
+					<label>
+						<input type="radio" name="grafiek">
+						graph
+					</label>
+				</li>
+			</ul>	
+
+
 			<table>
 				<tr>
 					<th>Currently watching</th>
