--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 	
 <head>
 	<meta charset="UTF-8">
@@ -10,7 +10,7 @@
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link href="styles/index.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="../FED-Herkansing-24-25/images/favicon.png">
+	<link rel="icon" type="image/svg+xml" href="./images/favicon.png">
 </head>
 
 <body>
@@ -21,15 +21,16 @@
 
 
 		<section>
-			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/menuburgerwhite.svg" alt="Open main navigation "/></button>
-			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/searchiconwhite.svg" alt="Start searching "/></button>
-			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/bell.svg" alt="Notifications"/></button>
-			<button aria-hidden="true"><img src="../FED-Herkansing-24-25/images/iconen/profielfoto.png" alt="Open secondary navigation "/></button>
+			<button aria-hidden="true" aria-label="Open main navigation"><img src="./images/iconen/menuburgerwhite.svg" alt="Open main navigation "/></button>
+			<button aria-hidden="true" aria-label="Start searching"><img src="./images/iconen/searchiconwhite.svg" alt="Start searching "/></button>
+			<button aria-hidden="true" aria-label="Notifications"><img src="./images/iconen/bell.svg" alt="Notifications"/></button>
+			<button aria-hidden="true" aria-label="Open secondary navigation "><img src="./images/iconen/profielfoto.png" alt="Open secondary navigation "/></button>
+		
 		</section>	
 
 		<form>
 			<input type="text" placeholder="Find Asian Dramas, Movies, Actors and more...">
-			<button><img src="../FED-Herkansing-24-25/images/iconen/kruis.svg" alt="Stop searching"/></button>
+			<button><img src="./images/iconen/kruis.svg" alt="Stop searching"/></button>
 		</form>
 
 
@@ -63,7 +64,7 @@
 				</li>
 
 				<li>
-					<a href="../FED-Herkansing-24-25/profile.html">
+					<a href="./profile.html">
 						<svg id="profiel" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 237 237">
 							<g>
 							<circle  cx="107" cy="116" r="96"/>
@@ -208,11 +209,11 @@
 
 				<li>
 					<a href="#">
-						<img src="../FED-Herkansing-24-25/images/iconen/naviconen/dark.svg" alt="dark mode"/>
+						<img src="./images/iconen/naviconen/dark.svg" alt="dark mode"/>
 						<p>Dark Mode</p>				
 					</a>
 					<label>
-						<input type="radio" name="kleurtjes" value="light">
+						<input type="radio" name="kleurtjes" value="light" checked>
 						Light Mode
 					</label>
 					<label>
@@ -253,7 +254,6 @@
 					</a>
 				</li>
 			</ul>
-
 
 		<nav>
 			<button  aria-label="close navigation">
@@ -304,7 +304,7 @@
 	<ul>
 		<a href="#"> 
 
-		<li><img src="../FED-Herkansing-24-25/images/section1/newfilm.png" alt="Koo Kyo Hwan and Shin Hyun"></li>
+		<li><img src="./images/section1/newfilm.png" alt="Koo Kyo Hwan and Shin Hyun"></li>
 		<li>
 			<h2>Koo Kyo Hwan and Shin Hyun Been will reportedly join Jun Ji Hyun in a new film</h2>
 			<p>News</p>
@@ -338,7 +338,7 @@
 
 		<ul>
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/lovenextdoor.jpg" alt="Love Next Door Actors"> 
+				<a href="#"><img src="./images/section2/lovenextdoor.jpg" alt="Love Next Door Actors"> 
 				<h3>Love Next Door actors bid farewell with final remarks</h3>
 				<p>News</p>
 				<p>15 minutes ago</p>
@@ -359,7 +359,7 @@
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/superhero.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+				<a href="#"><img src="./images/section2/superhero.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 				<h3>Kang Mi Na will reportedly reunite with Ji Chang Wook and Seo In Guk in the upcoming superhero K-drama</h3>
 				<p>News</p>
 				<p>14 hours ago</p>
@@ -379,7 +379,7 @@
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/mythsandlegends.png" alt="Myths and Legends of Asia"> 
+				<a href="#"><img src="./images/section2/mythsandlegends.png" alt="Myths and Legends of Asia"> 
 				<h3>Myths and Legends of Asia</h3>
 				<p>Editorials</p>
 				<p>2 days ago</p>
@@ -399,7 +399,7 @@
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section2/uprising.jpeg" alt="Posters for Uprising"> 
+				<a href="#"><img src="./images/section2/uprising.jpeg" alt="Posters for Uprising"> 
 				<h3>Netflix releases still and posters for "Uprising"</h3>
 				<p>News</p>
 				<p>1 day ago</p>
@@ -450,32 +450,32 @@
 
 		<ul> 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/businessproposal.jpg" alt="Business proposal"> <p> Business Proposal</p></a>
+				<a href="#"><img src="./images/posters/businessproposal.jpg" alt="Business proposal"> <p> Business Proposal</p></a>
 				<p>Korean Drama</p>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/lovenextdoor.jpg" alt="Love next door"> <p> Love Next Door</p></a>
+				<a href="#"><img src="./images/posters/lovenextdoor.jpg" alt="Love next door"> <p> Love Next Door</p></a>
 				<p>Korean Drama</p>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
+				<a href="#"><img src="./images/posters/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
 				<p>Japanese Drama</p>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/blackout.jpg" alt="Black out"> <p> Black Out</p></a>
+				<a href="#"><img src="./images/posters/blackout.jpg" alt="Black out"> <p> Black Out</p></a>
 				<p>Korean Drama</p>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/alchemyofsouls.jpg" alt="Alchemy of Souls"> <p> Alchemy of Souls</p></a>
+				<a href="#"><img src="./images/posters/alchemyofsouls.jpg" alt="Alchemy of Souls"> <p> Alchemy of Souls</p></a>
 				<p>Korean Drama</p>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/vincenzo.jpg" alt="Vincenzo"> <p> Vincenzo</p></a>
+				<a href="#"><img src="./images/posters/vincenzo.jpg" alt="Vincenzo"> <p> Vincenzo</p></a>
 				<p>Korean Drama</p>
 			</li>
 		</ul>
@@ -497,7 +497,7 @@
 						<span>☆</span></li>	
 				</ul>
 
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/businessproposal.jpg" alt="Business proposal"> <p> Business Proposal</p></a>
+				<a href="#"><img src="./images/posters/businessproposal.jpg" alt="Business proposal"> <p> Business Proposal</p></a>
 				<p>Korean Drama</p>
 			</li>
 
@@ -511,7 +511,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/lovenextdoor.jpg" alt="Love next door"> <p> Love Next Door</p></a>
+				<a href="#"><img src="./images/posters/lovenextdoor.jpg" alt="Love next door"> <p> Love Next Door</p></a>
 				<p>Korean Drama</p>
 			</li>
 
@@ -525,7 +525,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
+				<a href="#"><img src="./images/posters/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
 				<p>Japanese Drama</p>
 			</li>
 
@@ -539,7 +539,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/blackout.jpg" alt="Black out"> <p> Black Out</p></a>
+				<a href="#"><img src="./images/posters/blackout.jpg" alt="Black out"> <p> Black Out</p></a>
 				<p>Korean Drama</p>
 			</li>
 
@@ -553,7 +553,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/alchemyofsouls.jpg" alt="Alchemy of Souls"> <p> Alchemy of Souls</p></a>
+				<a href="#"><img src="./images/posters/alchemyofsouls.jpg" alt="Alchemy of Souls"> <p> Alchemy of Souls</p></a>
 				<p>Korean Drama</p>
 			</li>
 
@@ -567,7 +567,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="../FED-Herkansing-24-25/images/posters/vincenzo.jpg" alt="Vincenzo"> <p> Vincenzo</p></a>
+				<a href="#"><img src="./images/posters/vincenzo.jpg" alt="Vincenzo"> <p> Vincenzo</p></a>
 				<p>Korean Drama</p>
 			</li>
 		</ul>
@@ -580,22 +580,22 @@
 		<a href="#">more&gt;&gt;</a>
 		<ul> 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section5/kimyoonjin.jpg" alt="Kim Yoon Jin"><p>Kim Yoon Jin</p></a>
+				<a href="#"><img src="./images/section5/kimyoonjin.jpg" alt="Kim Yoon Jin"><p>Kim Yoon Jin</p></a>
 				<p>American, age 51</p>
 			</li>	
 			
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section5/theacht.jpg" alt="The8"><p>The8</p></a>
+				<a href="#"><img src="./images/section5/theacht.jpg" alt="The8"><p>The8</p></a>
 				<p>Chinese, age 27</p>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section5/iljoo.jpg" alt="Ji Il Joo"><p>Ji Il Joo</p></a>
+				<a href="#"><img src="./images/section5/iljoo.jpg" alt="Ji Il Joo"><p>Ji Il Joo</p></a>
 				<p>Korean, age 39</p>
 			</li>
 
 			<li>
-				<a href="#"><img src="../FED-Herkansing-24-25/images/section5/jihu.jpg" alt="Park Ji Hu"> <p>Park Ji Hu</p></a>
+				<a href="#"><img src="./images/section5/jihu.jpg" alt="Park Ji Hu"> <p>Park Ji Hu</p></a>
 				<p>Korean, age 21</p>
 			</li>
 			
@@ -609,11 +609,11 @@
 		<a href="#">more&gt;&gt;</a>
 
 		<ul> 
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/flowerofevil.jpeg" alt="Flower of evil"></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/theuntamed.jpeg" alt="The untamed"></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/itsokaytonotbeokay.jpeg" alt="It's okay to not be okay"></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/hospitalplaylist.jpeg" alt="Hospital playlist"></a></li>
-			<li><a href="#"><img src="../FED-Herkansing-24-25/images/section6/weakheroclass1.jpeg" alt="Weak hero class one"></a></li>
+			<li><a href="#"><img src="./images/section6/flowerofevil.jpeg" alt="Flower of evil"></a></li>
+			<li><a href="#"><img src="./images/section6/theuntamed.jpeg" alt="The untamed"></a></li>
+			<li><a href="#"><img src="./images/section6/itsokaytonotbeokay.jpeg" alt="It's okay to not be okay"></a></li>
+			<li><a href="#"><img src="./images/section6/hospitalplaylist.jpeg" alt="Hospital playlist"></a></li>
+			<li><a href="#"><img src="./images/section6/weakheroclass1.jpeg" alt="Weak hero class one"></a></li>
 		</ul>
 		<h3>Drama's you wish you could watch for the first time again</h3>
 		<ul>
@@ -736,7 +736,7 @@
 			<li>
 				<a href="#">
 					<p>1</p>
-					<img src="../FED-Herkansing-24-25/images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<img src="./images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 					<h3>The Judge from Hell</h3>
 					<ul>
 						<li><span>☆</span> 
@@ -749,13 +749,13 @@
 					<p>Korean Drama, 14 episodes</p>
 					<p>29444 Watchers</p>
 				</a>
-				<button><img src="../FED-Herkansing-24-25/images/iconen/pencil.svg" alt="Change information about added drama"></button>
+				<button><img src="./images/iconen/pencil.svg" alt="Change information about added drama"></button>
 			</li>
 
 			<li>
 				<a href="#">
 					<p>2</p>
-					<img src="../FED-Herkansing-24-25/images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<img src="./images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 					<h3>Family by Choice</h3>
 					<ul>
 						<li><span>☆</span> 
@@ -768,13 +768,13 @@
 					<p>Korean Drama, 16 episodes</p>
 					<p>21,866 Watchers</p>
 				</a>
-				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Change information about added drama"></button>
+				<button><img src="./images/iconen/plus.svg" alt="Change information about added drama"></button>
 			</li>
 
 			<li>
 				<a href="#">
 					<p>3</p>
-					<img src="../FED-Herkansing-24-25/images/section7/letfreethecurseoftaekwondo.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<img src="./images/section7/letfreethecurseoftaekwondo.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 					<h3>Let Free the Cruse of Taekwondo</h3>
 					<ul>
 						<li><span>☆</span> 
@@ -787,13 +787,13 @@
 					<p>Korean Drama, 8 episodes</p>
 					<p>9,793 Watchers</p>
 				</a>
-				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Change information about added drama"></button>
+				<button><img src="./images/iconen/plus.svg" alt="Change information about added drama"></button>
 			</li>
 
 			<li>
 				<a href="#">
 					<p>4</p>
-					<img src="../FED-Herkansing-24-25/images/section7/avirtuousbusiness.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<img src="./images/section7/avirtuousbusiness.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 					<h3>A Virtuous Business</h3>
 					<ul>
 						<li><span>☆</span> 
@@ -806,13 +806,13 @@
 					<p>Korean Drama, 12 episodes</p>
 					<p>5,699 Watchers</p>
 				</a>
-				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Change information about added drama"></button>
+				<button><img src="./images/iconen/plus.svg" alt="Change information about added drama"></button>
 			</li>
 
 			<li>
 				<a href="#">
 					<p>5</p>
-					<img src="../FED-Herkansing-24-25/images/section7/seoulbusters.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<img src="./images/section7/seoulbusters.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
 					<h3>Seoul Busters</h3>
 					<ul>
 						<li><span>☆</span> 
@@ -825,7 +825,7 @@
 					<p>Korean Drama, 20 episodes</p>
 					<p>4,564 Watchers</p>
 				</a>
-				<button><img src="../FED-Herkansing-24-25/images/iconen/plus.svg" alt="Change information about added drama"></button>
+				<button><img src="./images/iconen/plus.svg" alt="Change information about added drama"></button>
 			</li>
 		</ul>
 	
@@ -837,26 +837,26 @@
 <!--FOOTER-->	
 	<footer>
 		<section>
-			<h2><img src="../FED-Herkansing-24-25/images/iconen/footerlogo.webp" alt="My drama list logo in de footer"></h2>
+			<h2><img src="./images/iconen/footerlogo.webp" alt="My drama list logo in de footer"></h2>
 			<p>&copy; Copyright 2024. All rights reserved</p>
 			
 			<ul>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/facebookicoon.svg" alt="Mydramalist facebook pagina"></a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/twittericoon.svg" alt="Mydramalist X pagina"> </a></li>
-				<li><a href="#"><img src="../FED-Herkansing-24-25/images/iconen/instagramicoon.svg" alt="Mydramalist Instagram pagina"></a></li>
-				<li><a href="#"> <img src="../FED-Herkansing-24-25/images/iconen/youtubeicoon.svg" alt="Mydramalist Youtube pagina"></a></li>
+				<li><a href="#"><img src="./images/iconen/facebookicoon.svg" alt="Mydramalist facebook pagina"></a></li>
+				<li><a href="#"><img src="./images/iconen/twittericoon.svg" alt="Mydramalist X pagina"> </a></li>
+				<li><a href="#"><img src="./images/iconen/instagramicoon.svg" alt="Mydramalist Instagram pagina"></a></li>
+				<li><a href="#"> <img src="./images/iconen/youtubeicoon.svg" alt="Mydramalist Youtube pagina"></a></li>
 			</ul>
 			<ul>
 				<li>
 					<a href="#">
-						<img src="../FED-Herkansing-24-25/images/iconen/appleicoon.svg" alt="Download on the my dramalist app, Apple Store">
+						<img src="./images/iconen/appleicoon.svg" alt="Download on the my dramalist app, Apple Store">
 						<p>Download on the App Store</p>
 					</a>
 				</li>
 
 				<li>
 					<a href="#">
-						<img src="../FED-Herkansing-24-25/images/iconen/playstoreicoon.svg" alt="Download on the my dramalist app, Google Play"> 
+						<img src="./images/iconen/playstoreicoon.svg" alt="Download on the my dramalist app, Google Play"> 
 						<p>Download on Google Play</p>
 					</a>
 				</li>
