--- a/profile.html
+++ b/profile.html
@@ -221,7 +221,7 @@
 					<p>Dark Mode</p>				
 				</a>
 				<label>
-					<input type="radio" name="kleurtjes" value="light">
+					<input type="radio" name="kleurtjes" value="light" checked>
 					Light Mode
 				</label>
 				<label>
@@ -357,12 +357,12 @@
 
 				<form>
 					<label>
-						<input type="radio" name="table">
+						<input type="radio" name="toggle" value="table" checked>
 						table
 					</label>
 					
 					<label>
-						<input type="radio" name="grafiek">
+						<input type="radio" name="toggle" value="image">
 						graph
 					</label>
 				</form>
@@ -375,7 +375,6 @@
 					<th>Plant to watch</th>
 					<th>On-hold</th>
 					<th>Dropped</th>
-					<th>Not interested</th>
 				</tr>
 
 				<tr>
@@ -384,7 +383,6 @@
 					<td>46 Shows</td>
 					<td>0 Shows</td>
 					<td>7 Shows</td>
-					<td>0 Shows</td>
 				</tr>
 
 				<tr>
@@ -393,9 +391,11 @@
 					<td>6 Movies</td>
 					<td>0 Movies</td>
 					<td>2 Movies</td>
-					<td>0 Movies</td>
 				</tr>
-			</table>	
+			</table>
+			
+			<img src="./images/grafiek/grafiek.png" alt="Personalized watchlist graph">
+			
 		</section>
 
 <!--SECTION 3  -->   
