--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 						<span>☆</span></li>	
 				</ul>
 
-				<a href="#"><img src="./images/posters/businessproposal.jpg" alt="Business proposal"> <p> Business Proposal</p></a>
+				<a href="#"><img src="./images/posters/businessproposal.jpg" alt="Business proposal's review 10 out of 10"> <p> Business Proposal</p></a>
 				<p>Korean Drama</p>
 			</li>
 
