--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="./images/posters/lovenextdoor.jpg" alt="Love next door"> <p> Love Next Door</p></a>
+				<a href="#"><img src="./images/posters/lovenextdoor.jpg" alt="Love next door's review 9 out of 10"> <p> Love Next Door</p></a>
 				<p>Korean Drama</p>
 			</li>
 
@@ -525,7 +525,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="./images/posters/goldenkamuy.jpg" alt="Golden Kamuy"> <p> Golden Kamuy</p></a>
+				<a href="#"><img src="./images/posters/goldenkamuy.jpg" alt="Golden Kamuy's review 8 out of 10"> <p> Golden Kamuy</p></a>
 				<p>Japanese Drama</p>
 			</li>
 
@@ -539,7 +539,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="./images/posters/blackout.jpg" alt="Black out"> <p> Black Out</p></a>
+				<a href="#"><img src="./images/posters/blackout.jpg" alt="Black out's review 5 out of 10"> <p> Black Out</p></a>
 				<p>Korean Drama</p>
 			</li>
 
@@ -553,7 +553,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="./images/posters/alchemyofsouls.jpg" alt="Alchemy of Souls"> <p> Alchemy of Souls</p></a>
+				<a href="#"><img src="./images/posters/alchemyofsouls.jpg" alt="Alchemy of Souls review 10 out of 10"> <p> Alchemy of Souls</p></a>
 				<p>Korean Drama</p>
 			</li>
 
@@ -567,7 +567,7 @@
 						<span>☆</span></li>
 				</ul>
 
-				<a href="#"><img src="./images/posters/vincenzo.jpg" alt="Vincenzo"> <p> Vincenzo</p></a>
+				<a href="#"><img src="./images/posters/vincenzo.jpg" alt="Vincenzo's review 8 out of 10"> <p> Vincenzo</p></a>
 				<p>Korean Drama</p>
 			</li>
 		</ul>
@@ -736,7 +736,7 @@
 			<li>
 				<a href="#">
 					<p>1</p>
-					<img src="./images/section7/thejudgefromhell.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<img src="./images/section7/thejudgefromhell.jpg" alt="The Judge from hell "> 
 					<h3>The Judge from Hell</h3>
 					<ul>
 						<li><span>☆</span> 
@@ -747,7 +747,7 @@
 						<li>8.8</li>	
 					</ul>
 					<p>Korean Drama, 14 episodes</p>
-					<p>29444 Watchers</p>
+					<p>29,444 Watchers</p>
 				</a>
 				<button><img src="./images/iconen/pencil.svg" alt="Change information about added drama"></button>
 			</li>
@@ -755,7 +755,7 @@
 			<li>
 				<a href="#">
 					<p>2</p>
-					<img src="./images/section7/familybychoice.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<img src="./images/section7/familybychoice.jpg" alt="family by choice "> 
 					<h3>Family by Choice</h3>
 					<ul>
 						<li><span>☆</span> 
@@ -768,13 +768,13 @@
 					<p>Korean Drama, 16 episodes</p>
 					<p>21,866 Watchers</p>
 				</a>
-				<button><img src="./images/iconen/plus.svg" alt="Change information about added drama"></button>
+				<button><img src="./images/iconen/plus.svg" alt="add drama to watchlist"></button>
 			</li>
 
 			<li>
 				<a href="#">
 					<p>3</p>
-					<img src="./images/section7/letfreethecurseoftaekwondo.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<img src="./images/section7/letfreethecurseoftaekwondo.jpg" alt="let free the curse of taekwondo "> 
 					<h3>Let Free the Cruse of Taekwondo</h3>
 					<ul>
 						<li><span>☆</span> 
@@ -787,13 +787,13 @@
 					<p>Korean Drama, 8 episodes</p>
 					<p>9,793 Watchers</p>
 				</a>
-				<button><img src="./images/iconen/plus.svg" alt="Change information about added drama"></button>
+				<button><img src="./images/iconen/plus.svg" alt="add drama to watchlist"></button>
 			</li>
 
 			<li>
 				<a href="#">
 					<p>4</p>
-					<img src="./images/section7/avirtuousbusiness.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<img src="./images/section7/avirtuousbusiness.jpg" alt="a Virtuous Business "> 
 					<h3>A Virtuous Business</h3>
 					<ul>
 						<li><span>☆</span> 
@@ -806,13 +806,13 @@
 					<p>Korean Drama, 12 episodes</p>
 					<p>5,699 Watchers</p>
 				</a>
-				<button><img src="./images/iconen/plus.svg" alt="Change information about added drama"></button>
+				<button><img src="./images/iconen/plus.svg" alt="add drama to watchlist"></button>
 			</li>
 
 			<li>
 				<a href="#">
 					<p>5</p>
-					<img src="./images/section7/seoulbusters.jpg" alt="Kang Mi Na, Ji Chang Wook and Seo In Guk "> 
+					<img src="./images/section7/seoulbusters.jpg" alt="seoul busters"> 
 					<h3>Seoul Busters</h3>
 					<ul>
 						<li><span>☆</span> 
@@ -825,7 +825,7 @@
 					<p>Korean Drama, 20 episodes</p>
 					<p>4,564 Watchers</p>
 				</a>
-				<button><img src="./images/iconen/plus.svg" alt="Change information about added drama"></button>
+				<button><img src="./images/iconen/plus.svg" alt="add drama to watchlist"></button>
 			</li>
 		</ul>
 	
