--- a/profile.html
+++ b/profile.html
@@ -368,7 +368,7 @@
 				</form>
 				
 
-			<table>
+			<table aria-label="Personalized watchlist table">
 				<tr>
 					<th>Currently watching</th>
 					<th>Completed</th>
